# code-intelligence-mcp

./: .gitignore  README.md  code_intelligence.py  main.py  mcp.json  mcp_client.py  pyproject.toml
src/: __init__.py  __main__.py  indexer.py  search.py  tools.py  types.py
